--- a/src/app/styles/_all.scss
+++ b/src/app/styles/_all.scss
@@ -56,8 +56,7 @@ ul {
 .default-panel {
     display: block;
     margin: 10px auto;
-    // background-color: wheat;
-    width: calc(100vw - 300px);
+    width: 90%;
     min-height: 100px;
     color: white;
     i {
