--- a/src/app/styles/pages/_chatbox.scss
+++ b/src/app/styles/pages/_chatbox.scss
@@ -3,8 +3,9 @@
     font-family: 'Oswald', sans-serif;
     display: inline-block;
     height: 400px;
+    width: 176px;
     border-top-left-radius: 4px;
-    width: 180px;
+    border-right: 4px solid #949ba2;
     ul {
         height: 300px;
         background-color: rgba(31, 41, 44, 0.7);
