--- a/src/app/styles/_all.scss
+++ b/src/app/styles/_all.scss
@@ -58,6 +58,7 @@ ul {
     margin: 10px auto;
     width: 90%;
     min-height: 100px;
+    min-width: 800px;
     color: white;
     i {
         color: #f6a821;
