chart on progress

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -38,5 +38,10 @@
             </div>
         </div>
 
+        <div class="default-panel full">
+            <h4>Income Chart</h4>
+            <canvas (window:resize)="resizeCanvas($event)" id="income-chart"></canvas>
+        </div>
+
     </div>
 </div>
