--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -18,7 +18,7 @@
 <div class="main-container">
     <app-sidebar></app-sidebar>
     <div class="content" id="content">
-        <div class="default-panel">
+        <div class="default-panel top-product">
             <h2>Top Products</h2>
             <div class="top-product-panel">
                 <div class="product-image">
