--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -8,6 +8,9 @@
             border-top-right-radius: 4px;
         }
     }
+    &.top-product {
+        min-width: 800px;
+    }
     table {
         border-spacing: 0px;
         margin-top: 10px;
